# dkb-runtime

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  infra-setup.md  service-implementation.md  test-writing.md
.github/workflows/: ci.yml  cross-repo-notify.yml  publish.yml
alembic/: env.py
alembic/versions/: 20260329_0001_init_schema.py  20260331_0002_score_cache_llm_usage.py  20260331_0003_directive_semantic_state.py
config/: dimension_model_v0_1.json  pack_examples_v0_1.json  verdict_policy_v0_1.json
dkb_runtime/: cli.py  main.py  version.py
dkb_runtime/api/: app.py  deps.py  router.py
dkb_runtime/api/middleware/: auth.py  (+2 more)
dkb_runtime/core/: config.py  paths.py
dkb_runtime/db/: session.py
dkb_runtime/models/: __init__.py  base.py  cache.py  directive.py  embedding.py  scoring.py  semantic_state.py  source.py  verdict.py
dkb_runtime/schemas/: cognitive.py  common.py  directive.py  health.py  pack.py  scoring.py  source.py  verdict.py
dkb_runtime/services/: __init__.py  audit.py  canonicalizer.py  cognitive_ops.py  collector.py  cost_tracker.py  embedding.py  exporter.py  extractor.py  llm_client.py  pack_engine.py  score_cache.py  scoring.py  scoring_prompts.py  token_exporter.py  verdict.py
dkb_runtime/web/: __init__.py  dashboard.py
experiments/: token_efficiency.py
schema/: 01_dkb_postgresql_v0_1.sql  02_dkb_seed_reference_v0_1.sql
scripts/: bootstrap_local.sh  load_seed.py
tests/: conftest.py  test_audit.py  test_auth.py  test_cache_cost.py  test_canonicalizer.py  test_collector.py  test_concept.py  test_embedding.py  test_embedding_dedup.py  test_exporter.py  test_extractor.py  test_health.py  test_imports.py  test_integration_pipeline.py  test_llm_scoring.py  test_pack_engine.py  test_scoring.py  test_token_exporter.py  test_unit_extractor.py  test_unit_scoring.py  test_unit_verdict.py  test_verdict.py
(+15 files in other folders)
