[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dkb-runtime"
version = "0.1.0"
description = "Runtime scaffold for DKB (Directive Knowledge Base)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "pgvector>=0.4",
  "psycopg[binary]>=3.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.6"
]

[tool.hatch.build.targets.wheel]
packages = ["dkb_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
