[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dkb-runtime"
version = "0.2.0"
description = "Runtime scaffold for DKB (Directive Knowledge Base)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "anthropic>=0.30",
  "click>=8.1",
  "fastapi>=0.115",
  "openai>=1.0",
  "passlib[bcrypt]>=1.7",
  "pgvector>=0.4",
  "python-jose[cryptography]>=3.3",
  "psycopg[binary]>=3.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "scikit-learn>=1.5",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.scripts]
dkb = "dkb_runtime.cli:cli"

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pyyaml>=6.0",
  "ruff>=0.6",
  "scikit-learn>=1.5",
  "tiktoken>=0.7"
]

[tool.hatch.build.targets.wheel]
packages = ["dkb_runtime"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
